--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "admin-lte": "^2.4.18"
+    "admin-lte": "^2.4.18",
+    "vue-axios": "^2.1.5"
   }
 }
